# isfetphcalc

./: LICENSE  README.md  example.py  pyproject.toml
isfetphcalc/: __init__.py  core.py
src/isfet_phcalc/: core.py
src/phcalc/: __init__.py
tests/: __init__.py  test_phcalc.py
